# volttron-emailer

./: .pre-commit-config.yaml  README.md  config  example.config.json  pyproject.toml
src/emailer/: agent.py
tests/: send_email.py
